# lapcare

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  PROJECT_CONSTITUTION.md  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  check  meson.build  meson.options  pyproject.toml  requirements-dev.txt  run
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_report.yml
.github/workflows/: ci.yml
data/: io.github.abhilashmuraleedharan.lapcare.desktop  io.github.abhilashmuraleedharan.lapcare.gschema.xml  io.github.abhilashmuraleedharan.lapcare.metainfo.xml  io.github.abhilashmuraleedharan.lapcare.policy  meson.build
debian/: changelog  control  copyright  rules
docs/: health-score-calibration.md  packaging.md  release.md  risks.md  security-design.md  testing.md  user-guide.md
docs/adr/: 0001-project-name-and-app-id.md  0002-license-gpl-3.0-or-later.md  0003-ui-stack-gtk4-libadwaita-python.md  0004-privilege-strategy-polkit.md  0005-packaging-deb-first-flatpak-deferred.md  0006-privileged-helper-threat-model.md  0007-async-integration-per-lts.md  0008-capability-model-deferred.md  0009-firmware-transport-libfwupd-gir.md  template.md
docs/guides/: adding-a-diagnostic.md  adding-a-page.md  adding-a-provider.md  capturing-fixtures.md
docs/history/: 2026-07-architecture-review-reconciliation.md  2026-07-architecture-review.md  2026-07-engineering-plan-v1.1.md  2026-07-m0-bootstrap-plan.md  README.md
docs/modules/: overview.md  providers.md
docs/status/: m0-skeleton-and-rails.md  m1-system-overview-and-hardware.md  m2-battery-health-and-wear.md  m3-firmware-updates.md  m4-storage-diagnostics-reports.md  m5-mvp-hardening-and-release.md
helper/: lapcare_helper.py  meson.build
src/: lapcare.gresource.xml  lapcare.in  meson.build
src/lapcare/: __init__.py  __main__.py  app.py  capture.py
src/lapcare/core/: __init__.py  battery_analysis.py  diagnostics.py  errors.py  firmware_policy.py  models.py  ports.py  report.py
src/lapcare/platform/: __init__.py  dbus.py  files.py  history.py  log.py  report.py  scheduler.py  subprocess.py
src/lapcare/providers/: __init__.py  battery_sysfs.py  disk_usage.py  dmi.py  fwupd.py  hwmon.py  os_info.py  pci_usb.py  storage_smart.py  thinkpad_acpi.py  upower.py
src/lapcare/ui/: __init__.py  window.blp  window.py
src/lapcare/ui/pages/: __init__.py  base_view_model.py
src/lapcare/ui/pages/battery/: __init__.py  page.blp  view.py  view_model.py
src/lapcare/ui/pages/dashboard/: __init__.py  page.blp  view.py  view_model.py
src/lapcare/ui/pages/diagnostics/: page.blp  report_render.py  view.py  view_model.py
src/lapcare/ui/pages/firmware/: page.blp  view.py  view_model.py
src/lapcare/ui/pages/hardware/: __init__.py  page.blp  view.py  view_model.py
src/lapcare/ui/pages/placeholder/: __init__.py  page.blp  view.py  view_model.py
src/lapcare/ui/pages/storage/: page.blp  view.py  view_model.py
src/lapcare/ui/widgets/: __init__.py  wear_chart.py
tests/: conftest.py
tests/dbusmock_templates/: fwupd.py
tests/fixtures/battery_sysfs/synthetic-charge-units/sys/class/power_supply/BAT0/: model_name
tests/fixtures/battery_sysfs/synthetic-pathological/sys/class/power_supply/BAT1/: energy_full_design
tests/fixtures/battery_sysfs/thinkpad-e16-gen2/sys/class/power_supply/BAT0/: energy_full  manufacturer  model_name
tests/fixtures/disk_usage/synthetic-mounts/proc/: mounts
tests/fixtures/dmi/qemu-vm/sys/class/dmi/id/: product_version
tests/fixtures/dmi/thinkpad-e16-gen2/sys/class/dmi/id/: bios_date  bios_version  board_name  product_family
tests/fixtures/hwmon/thinkpad-e16-gen2/: README.md
tests/fixtures/os_info/synthetic-full/etc/: os-release
tests/fixtures/os_info/synthetic-full/proc/: cpuinfo  meminfo
tests/fixtures/os_info/synthetic-full/proc/sys/kernel/: hostname  osrelease
tests/fixtures/os_info/synthetic-sparse/proc/: uptime
tests/fixtures/pci_usb/thinkpad-e16-gen2/: lspci.txt  lsusb.txt
tests/fixtures/storage_smart/synthetic-failing-sata/: smartctl-sda.json
tests/fixtures/storage_smart/thinkpad-e16-gen2/: README.md  smartctl-nvme0n1.json
tests/fixtures/storage_smart/thinkpad-e16-gen2/sys/block/nvme0n1/device/: model
tests/helper/: test_injection_suite.py
tests/providers/: conftest.py  test_battery_sysfs.py  test_disk_usage.py  test_dmi.py  test_fwupd.py  test_hwmon.py  test_os_info.py  test_pci_usb.py  test_storage_smart.py  test_thinkpad_acpi.py  test_upower.py
tests/smoke/: test_launch.py
tests/unit/: test_battery_analysis.py  test_battery_view_model.py  test_capture.py  test_core_models.py  test_dashboard_view_model.py  test_diagnostics.py  test_diagnostics_view_model.py  test_firmware_policy.py  test_firmware_view_model.py  test_hardware_view_model.py  test_history_store.py  test_placeholder_view_model.py  test_platform_runner_files.py  test_report_export.py  test_sanity.py  test_scheduler.py  test_storage_view_model.py
tools/: dev-container.sh  install-deps.sh  ppa-source.sh  stack_probe.py
tools/containers/: Dockerfile
